@@ -7,11 +7,7 @@ import org.ecommerce.common.dto.AdminProductListItemDto;
 import org.ecommerce.common.dto.CategoryDto;
 import org.ecommerce.common.dto.ProductShoppingListItemDto;
 import org.ecommerce.common.dto.VariantPriceDto;
-import org.ecommerce.common.entity.CategoryEntity;
-import org.ecommerce.common.entity.ProductEntity;
-import org.ecommerce.common.entity.ProductImageEntity;
-import org.ecommerce.common.entity.ProductVariantEntity;
-import org.ecommerce.common.entity.VariantPricesEntity;
+import org.ecommerce.common.entity.*;
 import org.ecommerce.common.enums.PriceTypeEn;
 import org.ecommerce.common.enums.ProductTypeEn;
 import org.ecommerce.common.repository.ProductImageRepository;
@@ -20,12 +16,7 @@ import org.ecommerce.common.repository.VariantPricesRepository;
 
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
-import java.util.Comparator;
-import java.util.EnumMap;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -40,8 +31,8 @@ import java.util.stream.Collectors;
  * assembly that briefly lived inside {@code ProductRepository}.
  */
 @ApplicationScoped
-public class ProductListItemAssembler {
-
+public class ProductListItemAssembler
+{
     @Inject
     ProductVariantRepository variantRepository;
 
@@ -54,7 +45,8 @@ public class ProductListItemAssembler {
     @Inject
     ProductMapper productMapper;
 
-    public AdminProductListItemDto buildAdminListItem(ProductEntity product, LocalDateTime now) {
+    public AdminProductListItemDto buildAdminListItem(ProductEntity product, LocalDateTime now)
+    {
         return buildAdminListItems(List.of(product), now).getFirst();
     }
 
@@ -62,67 +54,67 @@ public class ProductListItemAssembler {
      * Builds an admin product page using three bounded preload queries (variants,
      * primary-variant images, and retail prices), rather than querying per row.
      */
-    public List<AdminProductListItemDto> buildAdminListItems(List<ProductEntity> products, LocalDateTime now) {
+    public List<AdminProductListItemDto> buildAdminListItems(List<ProductEntity> products, LocalDateTime now)
+    {
         if (products == null || products.isEmpty()) {
             return List.of();
         }
         Map<UUID, List<ProductVariantEntity>> variantsByProduct = variantsByProduct(products, true);
-        List<UUID> primaryVariantIds = variantsByProduct.values().stream()
+        List<UUID> primaryVariantIds = variantsByProduct
+                .values()
+                .stream()
                 .filter(variants -> !variants.isEmpty())
-                .map(variants -> variants.getFirst().id)
+                .map(variants -> variants.getFirst().getId())
                 .toList();
-        Map<UUID, ProductImageEntity> thumbnailByVariant = imageRepository.findForVariantIds(primaryVariantIds).stream()
-                .collect(Collectors.groupingBy(image -> image.productVariant.id,
-                        Collectors.collectingAndThen(Collectors.toList(), List::getFirst)));
-        Map<UUID, Map<PriceTypeEn, VariantPricesEntity>> pricesByProduct = pricesByProduct(
-                products, List.of(PriceTypeEn.RETAIL_PRICE), now, false);
 
-        return products.stream()
-                .map(product -> buildAdminListItem(product, variantsByProduct.getOrDefault(product.id, List.of()),
-                        thumbnailByVariant, pricesByProduct.getOrDefault(product.id, Map.of())))
+        Map<UUID, ProductImageEntity> thumbnailByVariant = imageRepository.findForVariantIds(primaryVariantIds).stream().collect(Collectors.groupingBy(image -> image.getProductVariant().getId(), Collectors.collectingAndThen(Collectors.toList(), List::getFirst)));
+        Map<UUID, Map<PriceTypeEn, VariantPricesEntity>> pricesByProduct = pricesByProduct(products, List.of(PriceTypeEn.RETAIL_PRICE), now, false);
+
+        return products
+                .stream()
+                .map(product -> buildAdminListItem(product, variantsByProduct.getOrDefault(product.getId(), List.of()),
+                        thumbnailByVariant, pricesByProduct.getOrDefault(product.getId(), Map.of())))
                 .toList();
     }
 
-    private AdminProductListItemDto buildAdminListItem(
-            ProductEntity product,
-            List<ProductVariantEntity> variants,
-            Map<UUID, ProductImageEntity> thumbnailByVariant,
-            Map<PriceTypeEn, VariantPricesEntity> prices) {
+    private AdminProductListItemDto buildAdminListItem(ProductEntity product, List<ProductVariantEntity> variants, Map<UUID, ProductImageEntity> thumbnailByVariant, Map<PriceTypeEn, VariantPricesEntity> prices)
+    {
         AdminProductListItemDto dto = new AdminProductListItemDto();
-        dto.id = product.id != null ? product.id.toString() : null;
-        dto.name = product.name;
-        dto.slug = product.slug;
-        dto.status = product.status != null ? product.status.name() : null;
+        dto.setId(product.getId() != null ? product.getId().toString() : null);
+        dto.setName(product.getName());
+        dto.setSlug(product.getSlug());
+        dto.setStatus(product.getStatus() != null ? product.getStatus().name() : null);
 
         CategoryEntity cat = product.getCategory();
         if (cat != null) {
             CategoryDto catDto = new CategoryDto();
-            catDto.setId(cat.id);
-            catDto.setName(cat.name);
-            dto.category = catDto;
+            catDto.setId(cat.getId());
+            catDto.setName(cat.getName());
+            dto.setCategory(catDto);
         }
 
         if (!variants.isEmpty()) {
             ProductVariantEntity primaryVariant = variants.get(0);
-            dto.sku = primaryVariant.sku;
-            ProductImageEntity thumb = thumbnailByVariant.get(primaryVariant.id);
+            dto.setSku(primaryVariant.getSku());
+            ProductImageEntity thumb = thumbnailByVariant.get(primaryVariant.getId());
             if (thumb != null) {
-                dto.thumbnailUrl = thumb.imageUrl;
+                dto.setThumbnailUrl(thumb.getImageUrl());
             }
         }
 
-        dto.stockCount = variants.stream().mapToInt(variant -> variant.stockQuantity == null ? 0 : variant.stockQuantity).sum();
-        dto.stockLevel = deriveStockLevel(dto.stockCount);
+        dto.setStockCount(variants.stream().mapToInt(variant -> variant.getStockQuantity() == null ? 0 : variant.getStockQuantity()).sum());
+        dto.setStockLevel(deriveStockLevel(dto.getStockCount()));
 
         VariantPricesEntity retail = prices.get(PriceTypeEn.RETAIL_PRICE);
         if (retail != null) {
-            dto.retailPrice = retail.price.toPlainString();
+            dto.setRetailPrice(retail.getPrice().toPlainString());
         }
 
         return dto;
     }
 
-    public ProductShoppingListItemDto buildShoppingListItem(ProductEntity product, LocalDateTime now, boolean ignoreStatus) {
+    public ProductShoppingListItemDto buildShoppingListItem(ProductEntity product, LocalDateTime now, boolean ignoreStatus)
+    {
         return buildShoppingListItems(List.of(product), now, ignoreStatus).getFirst();
     }
 
@@ -132,78 +124,77 @@ public class ProductListItemAssembler {
      * query count is constant as the page size grows.
      */
     public List<ProductShoppingListItemDto> buildShoppingListItems(
-            List<ProductEntity> products, LocalDateTime now, boolean ignoreStatus) {
+            List<ProductEntity> products, LocalDateTime now, boolean ignoreStatus)
+    {
         if (products == null || products.isEmpty()) {
             return List.of();
         }
         Map<UUID, List<ProductVariantEntity>> variantsByProduct = variantsByProduct(products, ignoreStatus);
-        Map<UUID, List<ProductImageEntity>> imagesByProduct = imageRepository.findForListingProductIds(productIds(products)).stream()
-                .collect(Collectors.groupingBy(image -> image.productVariant.product.id));
-        Map<UUID, Map<PriceTypeEn, VariantPricesEntity>> pricesByProduct = pricesByProduct(products,
-                List.of(PriceTypeEn.RETAIL_PRICE, PriceTypeEn.WHOLESALE_PRICE,
-                        PriceTypeEn.RETAIL_SALE_PRICE, PriceTypeEn.WHOLESALE_SALE_PRICE), now, ignoreStatus);
+        Map<UUID, List<ProductImageEntity>> imagesByProduct = imageRepository.findForListingProductIds(productIds(products))
+                .stream()
+                .collect(Collectors.groupingBy(image -> image.getProductVariant().getProduct().getId()));
+        Map<UUID, Map<PriceTypeEn, VariantPricesEntity>> pricesByProduct = pricesByProduct(products, List.of(PriceTypeEn.RETAIL_PRICE, PriceTypeEn.WHOLESALE_PRICE, PriceTypeEn.RETAIL_SALE_PRICE, PriceTypeEn.WHOLESALE_SALE_PRICE), now, ignoreStatus);
 
-        return products.stream()
+        return products
+                .stream()
                 .map(product -> buildShoppingListItem(product,
-                        variantsByProduct.getOrDefault(product.id, List.of()),
-                        imagesByProduct.getOrDefault(product.id, List.of()),
-                        pricesByProduct.getOrDefault(product.id, Map.of()), now))
+                        variantsByProduct.getOrDefault(product.getId(), List.of()),
+                        imagesByProduct.getOrDefault(product.getId(), List.of()),
+                        pricesByProduct.getOrDefault(product.getId(), Map.of()), now))
                 .toList();
     }
 
-    private ProductShoppingListItemDto buildShoppingListItem(
-            ProductEntity product,
-            List<ProductVariantEntity> variants,
-            List<ProductImageEntity> images,
-            Map<PriceTypeEn, VariantPricesEntity> prices,
-            LocalDateTime now) {
+    private ProductShoppingListItemDto buildShoppingListItem(ProductEntity product, List<ProductVariantEntity> variants, List<ProductImageEntity> images, Map<PriceTypeEn, VariantPricesEntity> prices, LocalDateTime now)
+    {
         ProductShoppingListItemDto dto = new ProductShoppingListItemDto();
-        dto.id = product.id == null ? null : product.id.toString();
-        dto.name = product.name;
-        dto.slug = product.slug;
-        dto.shortDescription = product.shorDescription;
-        dto.productType = product.productType == null ? null : product.productType.name();
-        dto.status = product.status == null ? null : product.status.name();
+        dto.setId(product.getId() == null ? null : product.getId().toString());
+        dto.setName(product.getName());
+        dto.setSlug(product.getSlug());
+        dto.setShortDescription(product.getShortDescription());
+        dto.setProductType(product.getProductType() == null ? null : product.getProductType().name());
+        dto.setStatus(product.getStatus() == null ? null : product.getStatus().name());
 
-        dto.variantCount = variants.size();
-        dto.variantId = product.productType != ProductTypeEn.SIMPLE
-                ? null
-                : variants.isEmpty() ? null : variants.getFirst().id.toString();
-        dto.images = images.stream()
+        dto.setVariantCount(variants.size());
+        dto.setVariantId(product.getProductType() != ProductTypeEn.SIMPLE ? null : variants.isEmpty() ? null : variants.get(0).getId().toString());
+        dto.setImages(images
+                .stream()
                 .map(productMapper::mapImageEntityToDto)
-                .toList();
-        dto.retailPrice = toVariantPriceDto(prices.get(PriceTypeEn.RETAIL_PRICE), now);
-        dto.wholesalePrice = toVariantPriceDto(prices.get(PriceTypeEn.WHOLESALE_PRICE), now);
-        dto.retailSalePrice = toVariantPriceDto(prices.get(PriceTypeEn.RETAIL_SALE_PRICE), now);
-        dto.wholesaleSalePrice = toVariantPriceDto(prices.get(PriceTypeEn.WHOLESALE_SALE_PRICE), now);
+                .toList());
+        dto.setRetailPrice(toVariantPriceDto(prices.get(PriceTypeEn.RETAIL_PRICE), now));
+        dto.setWholesalePrice(toVariantPriceDto(prices.get(PriceTypeEn.WHOLESALE_PRICE), now));
+        dto.setRetailSalePrice(toVariantPriceDto(prices.get(PriceTypeEn.RETAIL_SALE_PRICE), now));
+        dto.setWholesaleSalePrice(toVariantPriceDto(prices.get(PriceTypeEn.WHOLESALE_SALE_PRICE), now));
         return dto;
     }
 
-    private Map<UUID, List<ProductVariantEntity>> variantsByProduct(List<ProductEntity> products, boolean ignoreStatus) {
-        return variantRepository.findForProductIds(productIds(products), ignoreStatus).stream()
-                .collect(Collectors.groupingBy(variant -> variant.product.id));
+    private Map<UUID, List<ProductVariantEntity>> variantsByProduct(List<ProductEntity> products, boolean ignoreStatus)
+    {
+        return variantRepository.findForProductIds(productIds(products), ignoreStatus)
+                .stream()
+                .collect(Collectors.groupingBy(variant -> variant.getProduct().getId()));
     }
 
     private Map<UUID, Map<PriceTypeEn, VariantPricesEntity>> pricesByProduct(
-            List<ProductEntity> products, List<PriceTypeEn> priceTypes, LocalDateTime now, boolean ignoreStatus) {
+            List<ProductEntity> products, List<PriceTypeEn> priceTypes, LocalDateTime now, boolean ignoreStatus)
+    {
         Comparator<VariantPricesEntity> priceOrder = Comparator
-                .comparing((VariantPricesEntity price) -> price.price)
-                .thenComparing(price -> price.priceStartDate, Comparator.nullsFirst(Comparator.naturalOrder()))
-                .thenComparing(price -> price.createdAt, Comparator.nullsFirst(Comparator.naturalOrder()));
+                .comparing((VariantPricesEntity price) -> price.getPrice())
+                .thenComparing(price -> price.getPriceStartDate(), Comparator.nullsFirst(Comparator.naturalOrder()))
+                .thenComparing(price -> price.getCreatedAt(), Comparator.nullsFirst(Comparator.naturalOrder()));
 
         Map<UUID, Map<PriceTypeEn, VariantPricesEntity>> result = new HashMap<>();
-        for (VariantPricesEntity price : variantPricesRepository.findActiveForProductIds(
-                productIds(products), priceTypes, now, ignoreStatus)) {
-            UUID productId = price.variant.product.id;
+        for (VariantPricesEntity price : variantPricesRepository.findActiveForProductIds(productIds(products), priceTypes, now, ignoreStatus)) {
+            UUID productId = price.getVariant().getProduct().getId();
             result.computeIfAbsent(productId, unused -> new EnumMap<>(PriceTypeEn.class))
-                    .merge(price.priceType, price, (current, candidate) -> priceOrder.compare(current, candidate) <= 0 ? current : candidate);
+                    .merge(price.getPriceType(), price, (current, candidate) -> priceOrder.compare(current, candidate) <= 0 ? current : candidate);
         }
         return result;
     }
 
-    private List<UUID> productIds(List<ProductEntity> products) {
+    private List<UUID> productIds(List<ProductEntity> products)
+    {
         return products.stream()
-                .map(product -> product.id)
+                .map(ProductEntity::getId)
                 .filter(java.util.Objects::nonNull)
                 .distinct()
                 .toList();
@@ -211,7 +202,8 @@ public class ProductListItemAssembler {
 
     // ─── Pure field mapping (no queries) ────────────────────────────────────
 
-    private String deriveStockLevel(int stockCount) {
+    private String deriveStockLevel(int stockCount)
+    {
         if (stockCount <= 0) {
             return "OUT_OF_STOCK";
         } else if (stockCount <= 10) {
@@ -221,22 +213,24 @@ public class ProductListItemAssembler {
         }
     }
 
-    private VariantPriceDto toVariantPriceDto(VariantPricesEntity price, LocalDateTime now) {
+    private VariantPriceDto toVariantPriceDto(VariantPricesEntity price, LocalDateTime now)
+    {
         if (price == null) {
             return null;
         }
         VariantPriceDto dto = new VariantPriceDto();
-        dto.id = price.id == null ? null : price.id.toString();
-        dto.priceType = price.priceType == null ? null : price.priceType.name();
-        dto.price = price.price;
-        dto.priceStartDate = price.priceStartDate;
-        dto.priceEndDate = price.priceEndDate;
-        dto.isActive = Boolean.TRUE;
-        dto.saleDaysRemaining = calculateSaleDaysRemaining(price.priceType, price.priceEndDate, now);
+        dto.setId(price.getId() == null ? null : price.getId().toString());
+        dto.setPriceType(price.getPriceType() == null ? null : price.getPriceType().name());
+        dto.setPrice(price.getPrice());
+        dto.setPriceStartDate(price.getPriceStartDate());
+        dto.setPriceEndDate(price.getPriceEndDate());
+        dto.setIsActive(Boolean.TRUE);
+        dto.setSaleDaysRemaining(calculateSaleDaysRemaining(price.getPriceType(), price.getPriceEndDate(), now));
         return dto;
     }
 
-    private Long calculateSaleDaysRemaining(PriceTypeEn priceType, LocalDateTime endDate, LocalDateTime now) {
+    private Long calculateSaleDaysRemaining(PriceTypeEn priceType, LocalDateTime endDate, LocalDateTime now)
+    {
         if (priceType == null || endDate == null) {
             return null;
         }
